welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: only classes can have declared but undefined members
def dessiner()
    ^